fix: paragraph color on mobile breakpoint

--- a/css/components/service-item.css
+++ b/css/components/service-item.css
@@ -213,7 +213,7 @@
   }
 
   .mobile-service-item-wrapper p {
-    color: black;
+    color: rgb(255, 253, 253);
     font-weight: 400;
     margin: 2rem 1rem;
     font-family: "Nunito", sans-serif;
